--- a/notes/tensorflow2/1. TensorFlow核心概念.md
+++ b/notes/tensorflow2/1. TensorFlow核心概念.md
@@ -1,5 +1,15 @@
 [toc]
 
+TensorFlow™ 是一个采用 数据流图（data flow graphs），用于数值计算的开源软件库。节点（Nodes）在图中表示数学操作，图中的线（edges）则表示在节点间相互联系的多维数据数组，即张量（tensor）。它灵活的架构让你可以在多种平台上展开计算，例如台式计算机中的一个或多个CPU（或GPU），服务器，移动设备等等。
+TensorFlow 最初由Google大脑小组（隶属于Google机器智能研究机构）的研究员和工程师们开发出来，用于机器学习和深度神经网络方面的研究，但这个系统的通用性使其也可广泛用于其他计算领域。
+
+TensorFlow的主要优点：
+- 灵活性：支持底层数值计算，C++自定义操作符
+- 可移植性：从服务器到PC到手机，从CPU到GPU到TPU
+- 分布式计算：分布式并行计算，可指定操作符对应计算设备
+
+俗话说，万丈高楼平地起，TensorFlow这座大厦也有它的地基。Tensorflow底层最核心的概念是张量，计算图以及自动微分。
+
 ### 一、张量
 程序 = 数据结构+算法。
 TensorFlow程序 = 张量数据结构 + 计算图算法语言
@@ -194,8 +204,8 @@ b'hello world'
 动态计算图已经不区分计算图的定义和执行了，而是定义后立即执行。因此称之为**Eager Excution**.
 Eager这个英文单词的原意是"迫不及待的"，也就是立即执行的意思。
 
-# 动态计算图在每个算子处都进行构建，构建后立即执行
 ```python
+# 动态计算图在每个算子处都进行构建，构建后立即执行
 x = tf.constant("hello")
 y = tf.constant("world")
 z = tf.strings.join([x,y],separator=" ")
@@ -236,34 +246,8 @@ tf.Tensor(b'hello world', shape=(), dtype=string)
 import datetime
 ```
 
-# 创建日志
-import os
-stamp = datetime.datetime.now().strftime("%Y%m%d-%H%M%S")
-logdir = os.path.join('data', 'autograph', stamp)
+### 三、自动积分
 
-## 在 Python3 下建议使用 pathlib 修正各操作系统的路径
-# from pathlib import Path
-# stamp = datetime.datetime.now().strftime("%Y%m%d-%H%M%S")
-# logdir = str(Path('./data/autograph/' + stamp))
-
-writer = tf.summary.create_file_writer(logdir)
-
-#开启autograph跟踪
-tf.summary.trace_on(graph=True, profiler=True) 
-
-#执行autograph
-result = strjoin("hello","world")
-
-#将计算图信息写入日志
-with writer.as_default():
-    tf.summary.trace_export(
-        name="autograph",
-        step=0,
-        profiler_outdir=logdir)
-#启动 tensorboard在jupyter中的魔法命令
-%load_ext tensorboard
-#启动tensorboard
-%tensorboard --logdir ./data/autograph/
 
 
 
