--- a/notes/tensorflow2/1. TensorFlow核心概念.md
+++ b/notes/tensorflow2/1. TensorFlow核心概念.md
@@ -248,8 +248,103 @@ import datetime
 
 ### 三、自动积分
 
+神经网络通常依赖反向传播求梯度来更新网络参数，求梯度过程通常是一件非常复杂而容易出错的事情。而深度学习框架可以帮助我们自动地完成这种求梯度运算。
+Tensorflow一般使用梯度磁带tf.GradientTape来记录正向运算过程，然后反播磁带自动得到梯度值。这种利用tf.GradientTape求微分的方法叫做Tensorflow的自动微分机制。
+
+#### 3.1 利用梯度磁带求导数
+**求一阶导**
+```python
+import tensorflow as tf
+import numpy as np 
 
 
+x = tf.Variable(0.0,name = "x",dtype = tf.float32)
+a = tf.constant(1.0)
+b = tf.constant(-2.0)
+c = tf.constant(1.0)
+
+# 对常量张量也可以求导，需要增加watch
+with tf.GradientTape() as tape:
+    # f(x) = a*x**2 + b*x + c
+    tape.watch([a,b,c])
+    y = a*tf.pow(x,2) + b*x + c
+    
+dy_dx,dy_da,dy_db,dy_dc = tape.gradient(y,[x,a,b,c])
+print(dy_dx)
+print(dy_da)
+print(dy_db)
+print(dy_dc)
+```
+Output:
+```
+tf.Tensor(-2.0, shape=(), dtype=float32)
+tf.Tensor(0.0, shape=(), dtype=float32)
+tf.Tensor(0.0, shape=(), dtype=float32)
+tf.Tensor(1.0, shape=(), dtype=float32)
+```
+
+**求二阶导**
+```python
+with tf.GradientTape() as tape2:
+    with tf.GradientTape() as tape1:   
+        y = a*tf.pow(x,2) + b*x + c
+    dy_dx = tape1.gradient(y,x)   
+    
+dy2_dx2 = tape2.gradient(dy_dx,x)
+
+print(dy2_dx2)
+```
+Output:
+```
+tf.Tensor(2.0, shape=(), dtype=float32)
+```
+
+#### 3.2 利用梯度磁带和优化器求最小值
+**求导/梯度下降 分开**
+```python
+# 求f(x) = a*x**2 + b*x + c的最小值
+# 使用optimizer.apply_gradients
+
+x = tf.Variable(0.0,name = "x",dtype = tf.float32)
+a = tf.constant(1.0)
+b = tf.constant(-2.0)
+c = tf.constant(1.0)
+
+optimizer = tf.keras.optimizers.SGD(learning_rate=0.01)
+for _ in range(1000):
+    with tf.GradientTape() as tape:
+        y = a*tf.pow(x,2) + b*x + c
+    dy_dx = tape.gradient(y,x)
+    optimizer.apply_gradients(grads_and_vars=[(dy_dx,x)])
+    
+tf.print("y =",y,"; x =",x)
+```
+Output:
+```
+y = 0 ; x = 0.999998569
+```
+**基于优化器一步到位**
+```python
+x = tf.Variable(0.0,name = "x",dtype = tf.float32)
+
+#注意f()无参数
+def f():   
+    a = tf.constant(1.0)
+    b = tf.constant(-2.0)
+    c = tf.constant(1.0)
+    y = a*tf.pow(x,2)+b*x+c
+    return(y)
+
+optimizer = tf.keras.optimizers.SGD(learning_rate=0.01)   
+for _ in range(1000):
+    optimizer.minimize(f,[x])   
+    
+tf.print("y =",f(),"; x =",x)
+```
+Outut:
+```
+y = 0 ; x = 0.999998569
+```
 
 参考：
 1. [30天吃掉tensorflow2](https://github.com/lyhue1991/eat_tensorflow2_in_30_days/blob/master/2-1%2C%E5%BC%A0%E9%87%8F%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84.md)
