--- a/notes/tensorflow2/1.2 张量的操作.md
+++ b/notes/tensorflow2/1.2 张量的操作.md
@@ -101,3 +101,95 @@ Output:
 ```
 
 #### 2.2 索引切片
+
+**规则切片**
+张量的索引切片方式和numpy几乎是一样的。切片时支持缺省参数和省略号。
+对于tf.Variable,可以通过索引和切片对部分元素进行修改。
+对于提取张量的连续子区域，也可以使用tf.slice.
+
+```python
+print('连续取')
+tf.random.set_seed(3)
+t = tf.random.uniform([5,5],minval=0,maxval=10,dtype=tf.int32)
+tf.print(t)
+
+#第0行
+tf.print(t[0])
+#倒数第一行
+tf.print(t[-1])
+#第1行第3列
+tf.print(t[1,3])
+tf.print(t[1][3])
+#第1行至第3行
+tf.print(t[1:4,:])
+tf.print(tf.slice(t,[1,0],[3,5])) #tf.slice(input,begin_vector,size_vector)
+
+print('间隔取')
+#第1行至最后一行，第0列到最后一列每隔两列取一列
+tf.print(t[1:,::2])
+
+print('通过省略号取')
+a = tf.random.uniform([3,3,3],minval=0,maxval=10,dtype=tf.int32)
+tf.print(a)
+#省略号可以表示多个冒号
+tf.print(a[...,1])
+
+print('变量改数')
+#对变量来说，还可以使用索引和切片修改部分元素
+x = tf.Variable([[1,2],[3,4]],dtype = tf.float32)
+x[1,:].assign(tf.constant([0.0,0.0]))
+tf.print(x)
+```
+Output:
+```
+连续取
+[[4 7 4 2 9]
+ [9 1 2 4 7]
+ [7 2 7 4 0]
+ [9 6 9 7 2]
+ [3 7 0 0 3]]
+[4 7 4 2 9]
+[3 7 0 0 3]
+4
+4
+[[9 1 2 4 7]
+ [7 2 7 4 0]
+ [9 6 9 7 2]]
+[[9 1 2 4 7]
+ [7 2 7 4 0]
+ [9 6 9 7 2]]
+间隔取
+[[9 2 7]
+ [7 7 0]
+ [9 9 2]
+ [3 0 3]]
+通过省略号取
+[[[7 3 9]
+  [9 0 7]
+  [9 6 7]]
+
+ [[1 3 3]
+  [0 8 1]
+  [3 1 0]]
+
+ [[4 0 6]
+  [6 2 2]
+  [7 9 5]]]
+[[3 0 6]
+ [3 8 1]
+ [0 2 9]]
+变量改数
+[[1 2]
+ [0 0]]
+```
+
+**不规则切片**
+此外，对于不规则的切片提取,可以使用tf.gather,tf.gather_nd,tf.boolean_mask。
+
+tf.boolean_mask功能最为强大，它可以实现tf.gather,tf.gather_nd的功能，并且tf.boolean_mask还可以实现布尔索引。
+
+如果要通过修改张量的某些元素得到新的张量，可以使用tf.where，tf.scatter_nd。
+
+
+参考：
+1. [4-1,张量的结构操作](https://github.com/lyhue1991/eat_tensorflow2_in_30_days/blob/master/4-1%2C%E5%BC%A0%E9%87%8F%E7%9A%84%E7%BB%93%E6%9E%84%E6%93%8D%E4%BD%9C.md)
