--- a/notes/机器学习可解释性/模型可解释性介绍.md
+++ b/notes/机器学习可解释性/模型可解释性介绍.md
@@ -1,6 +1,14 @@
 [toc]
 
+### 介绍
+
 [Interpretable Machine Learning——Christoph Molnar](https://christophm.github.io/interpretable-ml-book/)
 
 story time
+受[IMPORT AI](https://jack-clark.net/)启发
 
+Lightning Never Strikes Twice-> pump 发生bug导致病人手术过程死亡？ 黑盒但并不随机
+Trust Fall -> 作为信誉系统的贡献者之一，却被打上了低信誉评价，而且此时模型已经融入社会体系，地位高到难以质疑
+Fermi’s Paperclips -> 定居火星的人们，回忆着地球上的人们 像他们制造的机器一样向着一维的、局部的、不受控制（不可解释的）的最优解前进，走向文明的过滤器，走向灭亡
+
+### 可解释性（Interpretability）
