--- a/notes/机器学习可解释性/模型可解释性介绍.md
+++ b/notes/机器学习可解释性/模型可解释性介绍.md
@@ -1,6 +1,6 @@
 [toc]
 
-### 介绍
+### 一、介绍
 
 [Interpretable Machine Learning——Christoph Molnar](https://christophm.github.io/interpretable-ml-book/)
 
@@ -11,4 +11,11 @@ Lightning Never Strikes Twice-> pump 发生bug导致病人手术过程死亡？ 
 Trust Fall -> 作为信誉系统的贡献者之一，却被打上了低信誉评价，而且此时模型已经融入社会体系，地位高到难以质疑
 Fermi’s Paperclips -> 定居火星的人们，回忆着地球上的人们 像他们制造的机器一样向着一维的、局部的、不受控制（不可解释的）的最优解前进，走向文明的过滤器，走向灭亡
 
-### 可解释性（Interpretability）
+这些故事中的机器学习系统或多或少出现了一些难以解释的问题，并造成了比较严重且不可挽回的后果。
+
+### 二、可解释性（Interpretability/Explainability）
+从数学层面定义可解释性是很困难的，作者引用了两个非数学层面的定义:
+- Interpretability is the degree to which a human can understand the cause of a decision. 
+- Interpretability is the degree to which a human can consistently predict the model's result
+
+#### 2.1 可解释性的重要性
